[build-system]
requires = [
	"scikit-build-core>=0.4.3", 
	"nanobind>=1.8.0",
	"cmake>=3.27"
]
build-backend = "scikit_build_core.build"

[project]
name = "pyqtools"
version = "0.0.1"
description = "Tools for managing my quantum simulations."
requires-python = ">=3.10"
authors = [
	{ name = "Eliot Heinrich", email = "heinriea@bc.edu" },
]

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"

[tool.scikit-build.cmake.define]
BUILDING_PYQTOOLS = "ON"

[tool.cibuildwheel]
build-verbosity = 1

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
