[build-system]
requires = [
	"scikit-build-core>=0.4.3", 
	"nanobind>=1.8.0",
	"cmake>=3.26"
]
build-backend = "scikit_build_core.build"

[project]
name = "utils"
version = "1.0.0"
description = "Collection of assorted stuff"
requires-python = ">=3.10"
authors = [
	{ name = "Eliot Heinrich", email = "heinriea@bc.edu" },
]

[tool.scikit-build]
minimum-version = "0.4"
build-dir = "build/{wheel_tag}"
wheel.py-api = "cp312"

[tool.scikit-build.cmake.define]
UTILS_BUILD_PYTHON="On"
CMAKE_BUILD_TYPE="Release"

[tool.cibuildwheel]
build-verbosity = 1

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "10.14"
